--- a/Proyecto-10/css/styles.css
+++ b/Proyecto-10/css/styles.css
@@ -15,6 +15,7 @@ body {
 .layout {
     width: 100;
     display: flex;
+    margin-top: 2rem;
     flex-direction: column;
     align-items: center;
 
@@ -31,15 +32,18 @@ body {
 
 .layout__search {
     display: flex;
+    margin: 2rem;
     flex-direction: row;
     width: 60%;
     justify-content: center;
+
 }
 
 
 .search__input{
-    width: 100%;
+    width: 60%;
     padding: 1rem;
+    text-align: center;
     border-radius: 1.5rem 0 0 1.5rem;
     border: 0;
     outline: 0;
@@ -55,7 +59,7 @@ body {
 }
 
 .search__btn{
-    padding: 2.2rem;
+    padding: 1.5rem;
     border-radius: 0 1.5rem 1.5rem 0;
     border: none;
     outline: none;
@@ -73,12 +77,14 @@ body {
     display: flex;
     margin-top: 1.5rem;
     justify-content: space-evenly;
-    padding: 1.5rem;
-    margin-top: 5rem;
+    padding: 1rem;
+    margin-top: 2.5rem;
     border: 0.5rem solid #88c010;
     background-color: white;
     border-radius: 1rem;
-    width: 80%;    
+    position: relative;
+    width: 70%;    
+    box-shadow: 0 10px 10px #ccc;
 }
 
 
@@ -96,21 +102,36 @@ body {
 }
 
 .result__subtitle {
-
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: #88c010;
 }
 
-
 .result__title {    
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.8rem;
     line-height: 1.2;
     letter-spacing: -0.1rem;
     font-family: "Roboto", sans-serif;
     transition: all 0.3s;
 }
 
+.layout__map {
+    width: 100%;
 
+}
+
+.map__frame {
+    width: 100%;
+    outline: none;
+    border: none;
+    margin-top: -5rem;
+}
+
+.map__frame iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+}
 
