--- a/Proyecto-12/css/styles.css
+++ b/Proyecto-12/css/styles.css
@@ -11,7 +11,7 @@ body{
 .layout{
     width: 100%;
     height: 100%;
-    background-color: mediumturquoise;
+    background-color: bisque;
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -21,17 +21,17 @@ body{
 
 .main__title {
     font-size: 4rem;
-    color: aliceblue;
+    color: midnightblue;
 
 }
 
 
 .title__text {
-    font-size: 6rem;
+    font-size: 4.5rem;
     height: 7rem;
     line-height: 7rem;
     overflow: hidden;
-    color: aliceblue;
+    color: midnightblue;
 }
 
 .title__rotate{
@@ -45,7 +45,23 @@ body{
         transform: translateY(0);
     }
 
-    100%{
+    25%{
+        transform: translateY(-7rem);
+    }
+
+    45%{
+        transform: translateY(-7rem);
+    }
+    50% {
+        transform: translateY(-7rem);
+    }
+    70%{
+        transform: translateY(-14rem);
+    }
+    75%{
         transform: translateY(-21rem);
+    }
+    100% {
+        transform: translateY(0rem);
     }
 }
