--- a/Proyecto-14/assets/css/styles.css
+++ b/Proyecto-14/assets/css/styles.css
@@ -23,6 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
 }
 
@@ -48,3 +49,71 @@ body {
     border-left-color: transparent ;
    
 }
+
+
+.crono__time {
+    font-size: 8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color:azure;
+
+}
+
+.crono__btns{
+    display: flex;
+    flex-direction: row;
+    gap: 2.2rem;
+}
+
+.crono__start,
+.crono__stop,
+.crono__reset{
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 1rem;
+    font-weight: 400;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
+.crono__start:hover,
+.crono__stop:hover,
+.crono__reset:hover{
+    background-color: white;
+    color: black;
+    transition: all 1s ease-in-out;
+}
+
+.main__nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 70%;
+    padding: 1rem;
+    border-radius: 5rem;
+    background-color: mediumturquoise;
+    margin-top: 3rem;
+}
+
+.nav__item{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: azure;
+    opacity: 0.5;
+    padding: 1.5rem;
+    border-radius: 10rem;
+    cursor: pointer;
+    
+}
+
+.nav__item:first-child,
+.nav__item:hover {
+    opacity: 1;
+    border-radius: 5rem;
+    color: black;
+    background-color: greenyellow;
+    transition: all 300ms ease-in-out;
+    
+}
+
