--- a/Proyecto-20/styles.css
+++ b/Proyecto-20/styles.css
@@ -13,15 +13,23 @@ body {
 
 
 .layout {
+    display: grid;
     width: 1400px;
-    height: 100%;
+    height: 1600px;
     margin: 15px auto;
     text-align: center;
+    grid-template-areas: "header header" 
+                          "main lateral"
+                          "footer footer" ;
+    grid-template-columns: 60% auto;
     
 }
 
 
 .header {
+    grid-row: header;
+    width: 1400px;
+    text-align-last: center;
     background-color: tomato;
     padding: 30px;
     color: azure;
@@ -30,8 +38,7 @@ body {
 }
 
 .main{
-    width: 65%;
-    float: left;
+    grid-area: main;
 }
 
 .subtitle {
@@ -42,33 +49,38 @@ body {
     padding: 15px;
 }
 
+.articles {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    flex-wrap: wrap;
+
+}
 .article {
-    width: calc(50% - 40px);
+    flex-basis: calc(50% - 10px) ;
     height: 300px;
     background-color: yellow;
-    margin: 20px;
     line-height: 300px ;
-    float: left;
+   
 
 }
 
 .lateral {
-    width: 35%;
-    height: 1100px;
+    grid-area: lateral;
+    height: 100%;
     background-color: aquamarine;
-    float: left;
     padding-top: 20px;
     font-size: 18px;
 }
 
 footer {
+ grid-area: footer;   
  background-color: gray;
  color: azure;
  clear: both;
  padding: 30px;
  font-size: 25px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
 
 }
 
