--- a/Proyecto-20/styles.css
+++ b/Proyecto-20/styles.css
@@ -74,6 +74,9 @@ body {
 }
 
 footer {
+ display: flex;
+ justify-content: center;
+ align-items: center;
  grid-area: footer;   
  background-color: gray;
  color: azure;
