--- a/Proyecto-20/styles.css
+++ b/Proyecto-20/styles.css
@@ -43,10 +43,11 @@ body {
 
 .subtitle {
     text-align: center;
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
     background-color: orange;
-    padding: 15px;
+    color: antiquewhite;
+    padding: 40px;
 }
 
 .articles {
@@ -58,6 +59,7 @@ body {
 }
 .article {
     flex-basis: calc(50% - 10px) ;
+    margin-top: 60px;
     height: 300px;
     background-color: yellow;
     line-height: 300px ;
