--- a/Proyecto-23/assets/styles.css
+++ b/Proyecto-23/assets/styles.css
@@ -28,3 +28,84 @@ body {
     gap: 5rem;
 
 }
+
+.buttons__btn1
+{ 
+    position: relative;
+    width: 22rem;
+    height: 7rem;
+    border-radius: 0.5rem;
+    border: 3px solid black;
+    cursor: pointer;
+    font-weight: 600;
+    overflow: hidden;
+    color: orangered;
+    background-color: navajowhite;
+    outline: none;
+
+}
+
+/*Efecto button 1*/
+
+.buttons__btn1::before{
+    content: 'Subir Video';
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    color: orangered;
+    font-weight: 600;
+    transform: translateY(7rem);
+
+}
+
+.buttons__btn1:hover::before{
+    transform: translateY(0);
+    transition: transform 0.5s;
+}
+
+
+
+.buttons__btn2 
+{
+    position: absolute;
+    background-color: antiquewhite;
+    width: 22rem;
+    height: 7rem;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 10rem;
+    cursor: pointer;
+    font-weight: 600;
+    border: none;
+    outline: none;
+}
+
+
+/*Efecto button 2*/
+
+.buttons__btn2::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: antiquewhite;
+    border-radius: 10rem;
+    z-index: -1;
+    transition: all 1s ease-in-out;
+
+}
+
+
+.buttons__btn2:hover::before{
+    transform: scaleX(1.3) scaleY(1.5);
+    opacity: 0;
+    
+}
